--- a/app/src/main/res/layout/teams_fragment.xml
+++ b/app/src/main/res/layout/teams_fragment.xml
@@ -15,19 +15,40 @@
         android:layout_height="match_parent"
         tools:context=".ui.teams.TeamsFragment">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/large_margin"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_league_name"
+                style="@style/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="SOMELEAGUE Teams" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_teams"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/medium_margin" />
+        </LinearLayout>
+
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/fap_draw_fixture"
-            android:text="@string/fap_fixture"
-            android:onClick="@{() -> fragment.navigateToFixtureFragment()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:elevation="4dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="@dimen/large_margin"
-            android:layout_marginBottom="@dimen/large_margin" />
+            android:layout_marginBottom="@dimen/large_margin"
+            android:elevation="4dp"
+            android:gravity="center"
+            android:onClick="@{() -> fragment.navigateToFixtureFragment()}"
+            android:text="@string/fap_fixture"
+            android:textSize="16sp" />
     </RelativeLayout>
 
 </layout>
