--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="medium_margin">16dp</dimen>
     <dimen name="small_margin">8dp</dimen>
 
+    <dimen name="team_logo_size">140dp</dimen>
 </resources>
