--- a/app/src/main/res/layout/week_fragment.xml
+++ b/app/src/main/res/layout/week_fragment.xml
@@ -2,15 +2,16 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fixture.FixtureFragment">
+        tools:context=".ui.week.WeekFragment"
+        android:background="#f5f5f5">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/weekPager"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:text="Hello" />
 
-    </RelativeLayout>
+    </FrameLayout>
 </layout>
