--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,8 @@
     <dimen name="large_margin">24dp</dimen>
     <dimen name="medium_margin">16dp</dimen>
     <dimen name="small_margin">8dp</dimen>
+    <dimen name="extra_small_margin">4dp</dimen>
 
     <dimen name="team_logo_size">100dp</dimen>
+    <dimen name="team_small_logo_size">50dp</dimen>
 </resources>
