--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -10,7 +10,11 @@
         android:label="TeamsFragment">
         <action
             android:id="@+id/action_teamsFragment_to_fixtureFragment"
-            app:destination="@id/fixtureFragment" />
+            app:destination="@id/fixtureFragment"
+            app:enterAnim="@anim/slide_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/slide_out" />
     </fragment>
     <fragment
         android:id="@+id/fixtureFragment"
