--- a/app/src/main/res/layout/team_list_item.xml
+++ b/app/src/main/res/layout/team_list_item.xml
@@ -6,14 +6,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/small_margin"
         app:cardCornerRadius="16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/medium_margin"
-            android:paddingStart="@dimen/large_margin"
-            android:paddingEnd="@dimen/large_margin">
+            android:paddingVertical="@dimen/small_margin"
+            android:paddingHorizontal="@dimen/large_margin">
 
             <ImageView
                 android:id="@+id/img_team_logo"
@@ -31,6 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/large_margin"
+                android:layout_marginBottom="@dimen/large_margin"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/img_team_logo"
                 app:layout_constraintEnd_toEndOf="parent"
