--- a/app/src/main/res/layout/teams_fragment.xml
+++ b/app/src/main/res/layout/teams_fragment.xml
@@ -13,12 +13,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#f5f5f5"
         tools:context=".ui.teams.TeamsFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="@dimen/medium_margin"
+            android:paddingHorizontal="@dimen/medium_margin"
             android:layout_marginTop="@dimen/large_margin"
             android:orientation="vertical">
 
