--- a/app/src/main/res/layout/fixture_fragment.xml
+++ b/app/src/main/res/layout/fixture_fragment.xml
@@ -23,12 +23,12 @@
             tools:text="WEEK TITLE"
             app:layout_constraintBottom_toBottomOf="@+id/btn_week_go_next"
             app:layout_constraintEnd_toStartOf="@+id/btn_week_go_next"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btn_week_go_back"
             app:layout_constraintTop_toTopOf="@+id/btn_week_go_next" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/weekPager"
+            android:background="?attr/colorPrimary"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/medium_margin"
@@ -46,9 +46,8 @@
             android:background="@null"
             android:onClick="@{() -> presenter.goBack()}"
             android:src="@drawable/ic_arrow_back_black"
-            android:layout_marginVertical="@dimen/extra_small_margin"
+            android:layout_marginVertical="@dimen/medium_margin"
             app:layout_constraintEnd_toStartOf="@+id/txt_week_title"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,9 +58,8 @@
             android:background="@null"
             android:onClick="@{() -> presenter.goNext()}"
             android:src="@drawable/ic_arrow_next_black"
-            android:layout_marginVertical="@dimen/extra_small_margin"
+            android:layout_marginVertical="@dimen/medium_margin"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/txt_week_title"
             app:layout_constraintTop_toTopOf="parent" />
 
