--- a/app/src/main/res/layout/teams_fragment.xml
+++ b/app/src/main/res/layout/teams_fragment.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:switch="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -17,48 +16,26 @@
         android:background="?android:colorPrimary"
         tools:context=".ui.teams.TeamsFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingHorizontal="@dimen/medium_margin"
             android:layout_marginTop="@dimen/large_margin"
-            android:orientation="vertical"
-            android:paddingHorizontal="@dimen/medium_margin">
-
-            <com.elacqua.soccerleague.customview.DayNightSwitch
-                android:layout_marginTop="@dimen/small_margin"
-                android:id="@+id/teams_switch_day_night"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                switch:checked="false"
-                switch:duration="300"
-                switch:layout_constraintEnd_toEndOf="parent"
-                switch:layout_constraintTop_toTopOf="parent"
-                switch:spotOffColor="#e0e0e0"
-                switch:spotPadding="6dp"
-                switch:switchOffColor="#3C4145"
-                switch:switchOffStrokeColor="#000000" />
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_league_name"
                 style="@style/title"
-                android:layout_marginStart="@dimen/small_margin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                switch:layout_constraintBottom_toBottomOf="@+id/teams_switch_day_night"
-                switch:layout_constraintStart_toStartOf="parent"
-                switch:layout_constraintTop_toTopOf="@+id/teams_switch_day_night"
                 tools:text="SOMELEAGUE Teams" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_teams"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="@dimen/small_margin"
-                switch:layout_constraintBottom_toBottomOf="parent"
-                switch:layout_constraintEnd_toEndOf="parent"
-                switch:layout_constraintStart_toStartOf="parent"
-                switch:layout_constraintTop_toBottomOf="@+id/teams_switch_day_night" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/medium_margin" />
+        </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/fap_draw_fixture"
